# sqlalchemyLearn

./: .env  pyproject.toml
src/: config.py  database.py  main.py  models.py  test_connect.py
src/queries/: core.py  orm.py
